[metadata]
name = pyctdev
# TODO v strip
version = attr: versioneer.get_version
cmdclass = attr: versioneer.get_cmdclass
description = python packaging common tasks for developers
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE.txt
url = http://github.com/pyviz/pyctdev

[options]
include_package_data = True
packages = find:
python_requires = >=2.7
install_requires =
    param
    # TODO consider restoring py2: <0.30 otherwise py2 users will just get an error (should really be fixed in doit)
    # pin because we should evaluate new major releases
    doit ==0.31.*
    # doit requires cloudpickle but does not specify the dependency    
    cloudpickle

    ## tox
    # because tox.ini is currently the master list of
    # tests/environments, some of tox is required - just the
    # config reading bit. But that's tied in with all of tox. And
    # tox is not in anaconda defaults. Further, tox and virtualenv
    # may be problematic with conda, or someone may have/want a
    # customized version, so we don't cause them to be installed
    # and just vendor them.
    #'tox'
    #'virtualenv'
    pluggy
    py
    #'argparse', # for virtualenv
    ##

    # Pretty much part of every python distribution now anyway.
    # Use it e.g. to be able to read pyproject.toml
    # Also many conda packages use it to build anyway.        
    # pinning to avoid https://github.com/pyviz/pyctdev/issues/12
    pip >=19.1.1
#        'setuptools >=39' # for its vendoring of stuff        

[options.extras_require]
ecosystem_pip =
    tox
    twine
    wheel

ecosystem_conda =
    pyyaml
    conda >=4.4
    conda-build >=3.10.1
    anaconda-client

tests =
    flake8

# todo conda vs pip graphviz
depgraph =
    graphviz

[options.entry_points]
console_scripts =
    pyctdev = pyctdev.__main__:main

[wheel]
universal = 1

[tool:pyctdev.conda]
packages =
    pyctdev = ecosystem_conda
              depgraph

[versioneer]
VCS = git
versionfile_source = pyctdev/_version.py
versionfile_build = pyctdev/_version.py
tag_prefix =
parentdir_prefix = pyctdev-
style = pep440-pre
