[metadata]
name = one
version = 0.0.1
url = http://something.local
license = BSD
description = Example one

[options]
packages = find:
python_requires = >=2.7
install_requires = 
    # just example
    hypothesis[numpy] <3.57.0
    # TODO: need a [] without a version to test cb dropping as selector

[options.extras_require]
tests =
    flake8
examples =
    # pulls in other deps and pinned (both deliberate, for testing)
    holoviews[recommended] <=1.10.0

