[metadata]
name = pyctdev-example-three
version = 0.0.1
url = http://something.local
license = BSD
description = Pyctdev example three

[options]
packages = find:
python_requires = >=2.7
install_requires = 
    numpy

[options.extras_require]
tests =
    flake8
examples =
    holoviews[recommended]
