[metadata]
name = two
version = 0.0.1
description = Some test project
url = http://localhost
license = BSD

[options]
include_package_data = True
packages = find:
python_requires = >=2.7
# just examples
# TODO: need a [] without a version to test cb dropping as selector
install_requires =
    hypothesis[numpy] <3.57.0

[options.extras_require]
tests =
    flake8

examples =
    # pulls in other deps and pinned (both deliberate, for testing)
    holoviews[recommended] <=1.10.0

[tool:pyctdev]
pins =
    holoviews = 1.10.0
    hypothesis = 3.56.0

[wheel]
universal = 1

